Final last major commit: * Rename files to english * Style some links * Adjust some positions * Refactor css files for readability * Add detail news page for individual news * Update some template content * Update routes according to file name changes * Fix more ident spaces * Update some tags to match HTML 5 semantics

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -67,3 +67,8 @@ footer {
   display: inline-block;
   margin-left: 5px;
 }
+
+footer .email-link {
+  color: #000000;
+  text-decoration: none;
+}
