--- a/public/css/news.css
+++ b/public/css/news.css
@@ -19,9 +19,39 @@
   box-shadow: 4px 4px grey;
 }
 
+.news-image-wrapper {
+  display: flex;
+  flex-direction: row;
+}
+
 .news-image {
-  width: 450px;
+  width: 430px;
   height: 250px;
+  object-fit: cover;
+}
+
+.news-title a {
+  color: #000000;
+  cursor: pointer;
+  text-decoration: none;
+}
+
+.overlay {
+  position: absolute;
+  transition: all 0.3s ease;
+  opacity: 0;
+}
+
+.news-image-wrapper:hover .overlay {
+  opacity: 1;
+}
+
+.overlayFade {
+  background-image: linear-gradient(to bottom, rgba(46, 162, 191, 0), rgba(46, 162, 191, 0), rgba(46, 162, 191, 0.5));
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  height: 250px;
+  width: 428px;
   object-fit: cover;
 }
 
@@ -91,4 +121,10 @@
 
 .news-more-button:hover a:after {
   opacity: 1;
+}
+
+.news-link {
+  width: 100%;
+  height: 100%;
+  z-index: 999;
 }
